@@ -1,4 +1,8 @@
-﻿drkns 04.06.2015 21:34:47 +0200 - build 4387
+﻿drkns 04.06.2015 23:42:07 +0200 - build 4388
+
+1. VC10.
+
+drkns 04.06.2015 21:34:47 +0200 - build 4387
 
 1. Более параноидальные настройки предупреждений для gcc.
 
